plugins/javaFX/testData/css/highlighting/classReferences.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.scene.layout.AnchorPane?>
<?import javafx.scene.control.Label?>
<?import javafx.scene.control.Button?>
<?import java.net.URL?>
<AnchorPane id="AnchorPane" xmlns:fx="http://javafx.com/fxml" stylesheets="mystyle.css">
    <Button fx:id="bbb" layoutX="100.0" layoutY="80.0" text="Hello World" textFill="#8f00ff" styleClass="<error descr="Cannot resolve symbol 'unknownLabel'">unknownLabel</error>"/>
    <Label layoutX="54.0" layoutY="50.0" prefWidth="193.0" text="Press this button to get hello" styleClass="label"/>

</AnchorPane>
